fixes on the home page

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="Stylesheet" type="text/css" href="../../Public/css/index.css"/>
+    <link rel="Stylesheet" type="text/css" href="../../Public/css/login.css"/>
     <title>BrickShop</title>
 </head>
 <body>
