change apple icon

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -39,7 +39,7 @@
         </button>
         <button class='button2' type="button"><i class="fas fa-pen"></i><a href="?page=register">ZAREJESTRUJ SIĘ</a>  </button>
         <button class='button3' type="button"><i class="fab fa-google-plus-g"></i>ZALOGUJ SIĘ PRZEZ GOOGLE</button>
-        <button class='button4' type="button"><i class="fab fa-google-plus-g"></i>ZALOGUJ SIĘ UŻYWAJĄC KONTA APPLE</button>
+        <button class='button4' type="button"><i class="fab fa-apple"></i>ZALOGUJ SIĘ UŻYWAJĄC KONTA APPLE</button>
     </form>
 </div>
 </body>
