--- a/public/views/login.html
+++ b/public/views/login.html
@@ -33,9 +33,8 @@
             <input name="password" type="password" placeholder="HASŁO">
             <i class="fas fa-lock" aria-hidden="true"></i>
         </div>
-        <button class='button1' type="submit"><i class="fas fa-arrow-right fa-lg" style="color: #0B7EE0 "></i>
-        </button>
-        <button class='button2' type="button"><i class="fas fa-pen"></i><a href="?page=register">ZAREJESTRUJ SIĘ</a>  </button>
+        <button class='button1' type="submit"><i class="fas fa-arrow-right fa-lg" style="color: #0B7EE0 "></i></button>
+        <button class='button2' type="button"><i class="fas fa-pen"></i><a href="?page=register">ZAREJESTRUJ SIĘ</a></button>
         <button class='button3' type="button"><i class="fab fa-google-plus-g"></i>ZALOGUJ SIĘ PRZEZ GOOGLE</button>
         <button class='button4' type="button"><i class="fab fa-apple"></i>ZALOGUJ SIĘ UŻYWAJĄC KONTA APPLE</button>
     </form>
