--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="Stylesheet" type="text/css" href="../Public/css/style.css" />
+    <link rel="Stylesheet" type="text/css" href="../Public/css/profile.css" />
     <script src="https://kit.fontawesome.com/f4dcd7aa64.js" crossorigin="anonymous"></script>
     <title>Twój profil</title>
 </head>
