--- a/public/css/account.css
+++ b/public/css/account.css
@@ -1,3 +1,14 @@
+* {
+    outline: none;
+}
+
+.mess {
+    position: fixed;
+    top: 2em;
+    font: Bold 1.2em Arial;
+    color: red;
+}
+
 body{
         position: fixed;
         top: 0;
@@ -216,14 +227,12 @@ body{
             height: 60%;
             padding-bottom: 0.3em;
             margin-top: 2em;
-    
         }
     
         .logo{
             display: none;
         }
     
-        
         .button1{
             width: 100%;
             margin-top: 2.5em;
@@ -237,11 +246,10 @@ body{
             margin-left: 2.5em;
             margin-right: -5em;
         }
+            
         form > p{
             display: none;
         }
-
-
     
         form > input{
             background: transparent;
@@ -258,23 +266,39 @@ body{
             width: 80%;
         
         }
-    
-        h1{
-            display: inline-block;
-            font: Bold 1em Arial;
-            letter-spacing: 0;
-            color: #FFFFFF;
-        }
-    
-    
-        h2{
-            display: inline-table;
-            margin-top: 0;
-            font: Bold 0.9em Arial;
-            letter-spacing: 0;
-            color: #FFFFFF;
-            margin-bottom: 0;
-        }
-    
 
+                .head {
+        display: inline-block;
+        margin-bottom: 3em;
+        margin-top: 0;
+        width: 100%;
     }
+
+    .head > i {
+        color: white;
+        padding-left: 5%;
+        padding-right: 27%;
+    }
+
+    h1 {
+        color: #FFFFFF;
+        display: inline-block;
+        font: Bold 1em Arial;
+        letter-spacing: 0;
+    }
+
+
+    h2 {
+        color: #FFFFFF;
+        display: inline-table;
+        font: Bold 0.9em Arial;
+        letter-spacing: 0;
+        margin-bottom: 0;
+        margin-top: 0;
+    }
+
+    .mess {
+        top: 12em;
+        font: 1em Arial;
+    }
+}
