--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,4 +1,7 @@
-/*strona logowania - login*/
+* {
+    outline: none;
+}
+
 body { /*strona startowa*/
     width: 100%;
     height: 100%;
@@ -18,6 +21,12 @@ body { /*strona startowa*/
     justify-content: center;
     margin: 0;
     max-width: unset;
+}
+
+.messages{
+    display: block;
+    color: #FFFFFF;
+    font: Bold 1em Arial Rounded MT;
 }
 
 p { /*napis witamy*/
@@ -105,7 +114,7 @@ input:focus {
     padding-right: 1em;
 }
 
-.button1 { /*mały przycisk 3 z góry*/
+.button1 { /*mały przycisk strzałki 3 z góry*/
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 2px solid #BCE0FD;
     border-radius: 5em;
@@ -173,9 +182,11 @@ button[type="button"]:hover {
     .container {
         flex-direction: column;
     }
+    
     form {
         width: 60%;
     }
+    
     .button1 {
         width: 15%;
     }
@@ -189,22 +200,24 @@ button[type="button"]:hover {
     form {
         width: 60%;
     }
+    
     .button1 {
         background: transparent;
         color: white;
         width: 20%;
     }
+    
     .button3 {
         background: transparent;
         color: white;
     }
+    
     .button4 {
         background: transparent;
         color: white;
     }
+    
     .button1 > i {
         color: white;
     }
 }
-
-
