--- a/public/css/page.css
+++ b/public/css/page.css
@@ -47,7 +47,11 @@ body{
 }
 
 .wrapper .a{
-   grid-area: 1 / 8 / 5 / 11;
+    grid-area: 3 / 1 / 6 / 3;
+}
+
+.wrapper [class^="okno"] {
+    outline: none;
 }
 
 .wrapper .a .okno1{
@@ -55,8 +59,8 @@ body{
     height: 13em;
     background: transparent linear-gradient(180deg, #002AF9 0%, #0B8FDD 100%, #FFFFFF 100%) 0% 0% no-repeat padding-box;        
     box-shadow: 0px 3px 6px #000000;
-    margin-left: 4em;
-    margin-top: 5em;
+    margin-left: 6em;
+    margin-top: 6em;
     border: none; 
 }
 
@@ -69,13 +73,14 @@ a1 {
 }
 
 a1 > img {
-    width: 50em;
-    margin-left: 2em;
-    margin-top: 2em;
+    width: 35em;
+    height: 25em;
+    margin-left: -2.5em;
+    margin-top: -3em;
 }
 
 .wrapper .b{
-    grid-area: 7 / 9 / 10 / 11;
+    grid-area: 6 / 2 / 10 / 5;
 }
 
 .wrapper .b .okno2{
@@ -83,34 +88,32 @@ a1 > img {
     height: 13em;
     background: transparent linear-gradient(180deg, #002AF9 0%, #0B8FDD 100%, #FFFFFF 100%) 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #000000;
-    margin-left: -8em;
+    margin-top: 4.5em;
+    margin-left: 12em;
     border: none; 
 }
 
 b1 { 
     align-items: center;
     display: flex;
-    width: 30%;
+    width: 40%;
     margin-left: -1.90em;
     margin-top: -0.75em;
 }
 
 b1 > img {
-    width: 17em;
-    margin-top: -0.75em;
-}
-
-.wrapper button[class^="okno"]:hover{
-    box-shadow: 0 0 20px 0 white;
+    width: 25em;
+    margin-left: 2.5em;
+    margin-top: 0.5em;
 }
 
 .wrapper .c{
-    grid-area: 4 / 6 / 8 / 9;
+    grid-area: 2 / 4 / 5 / 7;
 }
 
 .wrapper .c .okno3{
-    width: 17em;
-    height: 10em;
+    width: 13em;
+    height: 13em;
     background: transparent linear-gradient(180deg, #002AF9 0%, #0B8FDD 100%, #FFFFFF 100%) 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #000000;
     margin-left: 4em;
@@ -126,20 +129,20 @@ c1 {
 
 c1 > img {
     width: 15em;
-    margin-top: -3em;
-    margin-left: 1em;
+    margin-top: 0em;
+    margin-left: 0em;
 }
 
 .wrapper .d{
-    grid-area: 6 / 2 / 10 / 5;
+    grid-area: 1 / 8 / 5 / 11;
 }
 
 .wrapper .d .okno4{
-    width: 13em;
-    height: 14em;
+    width: 11em;
+    height: 11em;
     background: transparent linear-gradient(180deg, #002AF9 0%, #0B8FDD 100%, #FFFFFF 100%) 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #000000;
-    margin-left: 18em;
+    margin-left: 10em;
     margin-top: 4em;
     border: none; 
 }
@@ -152,19 +155,21 @@ d1 {
 
 d1 > img {
     width: 15em;
+    height: 15em;
+    margin-top: -1.5em;
 }
 
 .wrapper .e{
-    grid-area: 8 / 5 / 11 / 8;
+    grid-area: 4 / 6 / 8 / 9;
 }
 
 .wrapper .e .okno5{
-    width: 12em;
-    height: 14em;
+    width: 17em;
+    height: 10em;
     background: transparent linear-gradient(180deg, #002AF9 0%, #0B8FDD 100%, #FFFFFF 100%) 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #000000;
-    margin-left: 3em;
-    margin-top: -2em;
+    margin-left: 8em;
+    margin-top: 1em;
     border: none; 
 }
  
@@ -175,9 +180,9 @@ e1 {
 }
 
 e1 > img {
-    width: 15em;
-    margin-left: -1.25em;
-    margin-top: -0.75em;
+    width: 16em;
+    margin-left: 0.5em;
+    margin-top: -3.5em;
 }
 
 .wrapper .f{
@@ -192,46 +197,43 @@ e1 > img {
 }
 
 .wrapper .f{
-    grid-area: 3 / 1 / 6 / 3;
+    grid-area: 8 / 5 / 11 / 8;
 }
 
-f1 { 
-    align-items: center;
-    display: flex;
-    width: 30%;
-}
-
-f1 > img {
-    width: 20em;
-    margin-top: -1.8em;
-}
-
-.wrapper [class^="okno"]
-{
-    outline: none;
-}
-
-.wrapper .f .okno6{
-    margin-top: 1em;
-    margin-left: 3em;
-    width: 11em;
-    height: 11em;
+.wrapper .f .okno6 {
+    margin-top: -3.5em;
+    margin-left: -10em;
+    width: 7em;
+    height: 7em;
     background: transparent linear-gradient(180deg, #002AF9 0%, #0B8FDD 100%, #FFFFFF 100%) 0% 0% no-repeat padding-box;;
     box-shadow: 0px 3px 6px #000000;
     border: none; 
 }
 
+f1 { 
+    align-items: center;
+    display: flex;
+    width: 40%;
+}
+
+f1 > img {
+    width: 30em;
+    height: 17em;
+    margin-top: -5em;
+    margin-left: -4em;
+}
+
 .wrapper .g{
-        grid-area: 2 / 4 / 5 / 7;
-    }
+    grid-area: 7 / 9 / 10 / 11;
+}
     
 .wrapper .g .okno7{
     width: 13em;
-    height: 13em;
+    height: 14em;
     background: transparent linear-gradient(180deg, #002AF9 0%, #0B8FDD 100%, #FFFFFF 100%) 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #000000;
-    margin-left: 1em;
-    margin-top: 2em;
+    margin-left: -2em;
+    margin-top: -1.5em;
     border: none; 
 }
 
@@ -242,19 +244,39 @@ g1 {
 }
 
 g1 > img {
-    width: 15em;
-    margin-top: 0em;
+    width: 18em;
+    height: 18em;
+    margin-top: -2em;
+    margin-left: -2.5em;
+}
+
+.wrapper button[class^="okno"]:hover {
+    background: none;
+    box-shadow: 0px 0px 40px 0 white;
+    margin-bottom: 4em;
+    margin-right: 4em;
+    transition: .2s all;
+}
+
+.wrapper button{
+    color: white;
+    font-size: 1em;
+    font-weight: bold;
+}
+
+.wrapper button:hover{
+    color: white;
+    font-size: 1.2em;
+    font-weight: bold;
 }
 
 @media only screen and (max-width: 992px){
-
     .wrapper .a .okno1{
         width: 12em;
         height: 12em;
         margin-top: 2em;
-
-
     }
+    
     .wrapper .d .okno4{
         width: 15em;
         height: 15em;
@@ -273,7 +295,6 @@ g1 > img {
         margin-left: 8em;
 
 @media screen and (max-width: 600px) {
-
     .wrapper .logo{
         grid-area: 1 / 1 / 3 / 11;
     }
@@ -283,7 +304,6 @@ g1 > img {
         height: 8em;
         margin-top: 0;
         margin-left: 2em;
-
     }
 
     .wrapper .b .okno2{
@@ -319,6 +339,7 @@ g1 > img {
         font-size: 0.8em;;
         top: 40%;
     }
+    
     .wrapper .f .okno6{
         width: 8em;
         height: 8em;
@@ -332,31 +353,32 @@ g1 > img {
         margin-top: 0;
         margin-left: 2em;
     }
+    
+    .wrapper .a {
+        grid-area: 3 / 1 / 5 / 6;
+    }
 
-    .wrapper .a{
+    .wrapper .b {
         grid-area: 3 / 6 / 5 / 11;
     }
-    
-    .wrapper .c{
-        grid-area: 7 / 1 / 9 / 6;
+
+    .wrapper .c {
+        grid-area: 5 / 1 / 7 / 6;
     }
 
-    .wrapper .d{
+    .wrapper .d {
         grid-area: 5 / 6 / 7 / 11;
     }
 
-    .wrapper .e{
+    .wrapper .e {
+        grid-area: 7 / 1 / 9 / 6;
+    }
+
+    .wrapper .f {
         grid-area: 7 / 6 / 9 / 11;
     }
 
-    .wrapper .f{
-        grid-area: 3 / 1 / 5 / 6;
-    } 
-    
-    .wrapper .g{
-        grid-area: 5 / 1 / 7 / 6;
+    .wrapper .g {
+        grid-area: 9 / 4 / 11 / 7;
     }
 }
-}
-}
-
