--- a/public/css/workers.css
+++ b/public/css/workers.css
@@ -69,14 +69,12 @@ form p{
     text-align: center;
     width: 100%;
     background-color: #c5deeb;;
-
 }
-.wrapper .content .section .wrap
-{
+
+.wrapper .content .section .wrap{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
-/* CONTENT */
 
 .delbut {
     background: none;
@@ -99,7 +97,6 @@ form p{
     display: block;
     margin-left: 12em;
     margin-top: 0.5em;
-
 }
 
 .wrapper .content .section .e .sidemenu button {
@@ -129,26 +126,20 @@ form p{
     font-weight: bold;
 }
 
-
 .wrapper .content .section .opis p {
     color: black;
     font-size: 0.7em;
     font-weight: bold;
-
 }
-
 
 #sidebarCollapse {
     display: none;
 }
 
 @media only screen and (min-width: 600px) and (max-width: 992px) {
-
     .wrapper .content .section {
-
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(5, 1fr);
-
     }
 
     .wrapper .content .section .e {
@@ -163,7 +154,6 @@ form p{
         margin-left: 5%;
         margin-right: 5%;
         width: 90%;
-
     }
 
     .wrapper .content .section .prof img {
@@ -171,16 +161,12 @@ form p{
         box-shadow: 0px 3px 6px #00000096;
         width: 120px;
     }
-
-
 }
 
 @media screen and (min-width: 0px) and (max-width: 600px) {
     .wrapper .content .section {
-
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(8, 1fr);
-
     }
 
     .wrapper .content .section .e {
@@ -190,7 +176,6 @@ form p{
     }
 
     .wrapper .content .section .e .sidemenu {
-
         display: grid;
         font-size: 0.7em;
         grid-auto-flow: column;
@@ -203,7 +188,6 @@ form p{
     #sidebarCollapse {
         display: block;
     }
-
 
     .wrapper .content .header {
         background: #0822FE 0% 0% no-repeat padding-box;
