--- a/src/Public/css/look_login.css
+++ b/src/Public/css/look_login.css
@@ -113,6 +113,7 @@ body {
     height: inherit;
     margin-left: 180px;
     width: inherit;
+    background-color: #c5deeb;
 }
 
 .wrapper .content .header {
@@ -157,7 +158,17 @@ body {
         margin-left: 4em;
         text-decoration: none;
     }
+    
+    #koszyk{
+        height: 4.5em;
+        width: 10em;
+        margin-top: -4em;
+    }
 
+    #napis{
+        margin-left: -2em;
+    }
+    
     #sidebarCollapse {
         display: block;
         left: 0;
@@ -189,5 +200,11 @@ body {
         transition: 0.5s; 
         width: 0; 
         z-index: 1;
+    }
+}
+
+@media screen and (min-width: 700px) and (max-width: 992px) {
+    .wrapper .sidebar{
+        width: 19%;
     }
 }
