--- a/src/Public/css/messages.css
+++ b/src/Public/css/messages.css
@@ -512,18 +512,28 @@
     .wrapper .content .section {
         background: transparent linear-gradient(180deg, #002AF9 0%, #0B8FDD 100%, #FFFFFF 100%) 0% 0% no-repeat padding-box;
         justify-content: center;
+
     }
 
     .wrapper .content .section .right {
         display: none;
+
+    }
+    .wrapper .content .section .left .icons {
+        background-color: transparent;
+    }
+    .wrapper .content .section .left .icons button {
+        background: #c5deeb;
     }
 
     .wrapper .content .section .left {
-        border: 1.5px solid white;
-        height: 80%;
         margin: 0;
-        margin-top: 4em;
+        margin-top: 1em;
         width: 80%;
+        height: 96%;
+        border-radius: 5em;
+        border: 2px solid white;
+        background: transparent;
     }
 
     .wrapper .content .section .left .searchbar form {
@@ -547,17 +557,17 @@
     }
 
     .wrapper .content .section .left .latest .one {
-        border-bottom: 1px solid white;
+        border-bottom: 2px solid white;
 
     }
 
     .wrapper .content .section .left .latest .two {
-        border-bottom: 1px solid white;
+        border-bottom: 2px solid white;
 
     }
 
     .wrapper .content .section .left .latest .three {
-        border-bottom: 1px solid white;
+        border-bottom: 2px solid #0B8FDD ;
     }
 
     #sidebarCollapse {
@@ -565,14 +575,16 @@
         color: #0821FF;
         margin-left: -2em;
     }
+
 }
 
-@media screen and (min-width: 600px) and (max-width: 992px) {
+@media screen and (min-width: 650px) and (max-width: 992px) {
     .wrapper .content .section {
         align-items: center;
         flex-direction: column;
     }
 
+    /*LEWE OKIENKO */
     .wrapper .content .section .left {
         height: auto;
         margin: 0;
@@ -602,5 +614,38 @@
 
     .wrapper .content .section .right .box form {
         padding-right: 1em;
+    }
+    .wrapper .content .section .right .messages .mess1 .avatar .profilepic {
+        margin-top: -0.5em;
+
+    }
+    .wrapper .content .section .right .messages .mess2 .avatar .profilepic {
+        margin-top: -1em;
+
+    }
+    .wrapper .content .section .right .messages .mess3 .avatar .profilepic {
+        margin-top: -1.5em;
+
+    }
+
+    .wrapper .content .section .right .messages .mess1 .avatar .info .frst{
+        margin-top: -2.5em;
+    }
+    .wrapper .content .section .right .messages .mess2 .avatar .info .frst{
+        margin-top: -4em;
+    }
+    .wrapper .content .section .right .messages .mess3 .avatar .info .frst{
+        margin-top: -4em;
+    }
+    .wrapper .content .section .right .messages .mess3 .mess p{
+        margin-top: 7.5-em;
+    }
+
+    .wrapper .content .section .right .messages .mess2 .mess p{
+        margin-top: 0em;
+    }
+
+    .wrapper .content .section .right .messages .mess3 .mess p{
+        margin-top: -1em;
     }
 }
