--- a/src/Public/css/page.css
+++ b/src/Public/css/page.css
@@ -270,69 +270,106 @@ g1 > img {
     font-weight: bold;
 }
 
-@media only screen and (max-width: 992px){
-    .wrapper .a .okno1{
+@media only screen and (max-width: 992px) {
+    .wrapper .a .okno1 {
         width: 12em;
         height: 12em;
         margin-top: 2em;
     }
-    
-    .wrapper .d .okno4{
-        width: 15em;
-        height: 15em;
+
+    .wrapper .b .okno2 {
+        margin-left: -5em;
+        margin-top: 8em;
     }
 
-    .wrapper .e .okno5{
-        width: 10em;
-        height: 10em;
-        margin-right: -4em;
-   }
+    .wrapper .c .okno3 {
+        margin-left: 6.5em;
+        margin-top: 5em;
+    }
 
-    .wrapper .g .okno7{
-        width: 15em;
-        height: 15em;
+    .wrapper .d .okno4 {
+        width: 12em;
+        height: 13em;
+        margin-left: -5em;
+
+    }
+
+    d1 > img {
+        margin-top: 0.1em;
+    }
+
+    .wrapper .e .okno5 {
+        margin-left: -4em;
+        margin-top: 10em;
+    }
+
+    .wrapper .f .okno6 {
+        margin-left: -7em;
+        margin-top: 0.5em;
+    }
+
+    .wrapper .g .okno7 {
         margin-top: 4em;
-        margin-left: 8em;
+        margin-left: -5em;
+    }
+}
 
 @media screen and (max-width: 600px) {
-    .wrapper .logo{
-        grid-area: 1 / 1 / 3 / 11;
+
+    a1 >img{
+        width: 25em;
+        height: 15em;
+        margin-top: -1.5em;
     }
-    
     .wrapper .a .okno1{
         width: 8em;
         height: 8em;
-        margin-top: 0;
-        margin-left: 2em;
+        margin-top: 2em;
+        margin-left: 3em;
     }
 
     .wrapper .b .okno2{
-        width: 8em;
-        height: 8em;
-        margin-top: 0;
-        margin-left: 1.5em;
+        width: 10em;
+        height: 10em;
+        margin-top: 4em;
+        margin-left: 16em;
     }
 
+    b1 > img {
+        width: 10em
+    }
     .wrapper .c .okno3{
-        width: 8em;
-        height: 8em;
-        margin-top: 0;
-        margin-left: 2em;
+        width: 10em;
+        height: 10em;
+        margin-top: 27em;
+        margin-left: -18em;
     }
 
+    c1  > img{
+        width: 10em;
+    }
     .wrapper .d .okno4{
-        width: 8em;
+        width: 4em;
         height: 8em;
-        margin-top: 0;
-        margin-left: 2em;
+        margin-top: 15em;
+        margin-left: -4em;
+    }
+
+    d1 > img {
+        margin-top: -3em;
+        margin-left: -3em;
     }
 
     .wrapper .e .okno5{
-        width: 8em;
+        width: 13em;
         height: 8em;
-        margin-top: 0;
-        margin-left: 2em;
-        margin-right: 0;
+        margin-top: 5em;
+        margin-left: -9em;
+    }
+
+    e1 > img{
+        width: 13em;
+        margin-left: -0.1em;
     }
 
     .wrapper .f{
@@ -341,44 +378,29 @@ g1 > img {
     }
     
     .wrapper .f .okno6{
-        width: 8em;
-        height: 8em;
-        margin-top: 0;
-        margin-left: 2em;
-    }  
+        width: 4em;
+        height: 5em;
+        margin-top: 1.5em;
+        margin-left: -33em;
+    }
+
+    f1 > img {
+        width: 20em;
+        height: 17em;
+    }
 
     .wrapper .g .okno7{
-        width: 8em;
-        height: 8em;
-        margin-top: 0;
-        margin-left: 2em;
-    }
-    
-    .wrapper .a {
-        grid-area: 3 / 1 / 5 / 6;
+        width: 5em;
+        height: 5em;
+        margin-top: 13em;
+        margin-left: -10em;
     }
 
-    .wrapper .b {
-        grid-area: 3 / 6 / 5 / 11;
-    }
-
-    .wrapper .c {
-        grid-area: 5 / 1 / 7 / 6;
-    }
-
-    .wrapper .d {
-        grid-area: 5 / 6 / 7 / 11;
-    }
-
-    .wrapper .e {
-        grid-area: 7 / 1 / 9 / 6;
-    }
-
-    .wrapper .f {
-        grid-area: 7 / 6 / 9 / 11;
-    }
-
-    .wrapper .g {
-        grid-area: 9 / 4 / 11 / 7;
+    g1 > img {
+        width: 15em;
+        height: 15em;
+        margin-top: -5em;
+        margin-left: -3em;
     }
 }
+
